--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "react-native": "0.68.2",
     "react-native-dotenv": "^3.3.1",
     "react-native-flash-message": "^0.2.1",
+    "react-native-image-crop-picker": "^0.39.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
     "react-native-svg": "^13.0.0",
+    "react-native-vision-camera": "^2.15.4",
     "react-redux": "^8.0.1",
     "redux": "^4.2.0"
   },
